@@ -43,7 +43,7 @@ CGI::Tiny - Common Gateway Interface, with no frills
     die "Invalid fribble parameter" unless length $fribble;
 
     if ($cgi->query_param('download')) {
-      $cgi->set_response_content_disposition(attachment => 'fribble.json');
+      $cgi->set_response_disposition(attachment => 'fribble.json');
     }
     $cgi->render(json => {fribble => $fribble});
   };
@@ -271,8 +271,8 @@ characters, so non-ASCII filenames make things trickier.
 
     my $basename = decode_utf8 $filepath->basename;
     my $mime = MIME::Types->new->mimeTypeOf($basename);
-    $cgi->set_response_content_type($mime->type) if defined $mime;
-    $cgi->set_response_content_disposition(attachment => $basename)->render(file => $filepath);
+    $cgi->set_response_type($mime->type) if defined $mime;
+    $cgi->set_response_disposition(attachment => $basename)->render(file => $filepath);
   };
 
 =head2 Routing
@@ -763,12 +763,12 @@ No effect after response headers have been rendered.
 
 The CGI protocol assumes a status of C<200 OK> if no response status is set.
 
-=head3 set_response_content_disposition
+=head3 set_response_disposition
 
-  $cgi = $cgi->set_response_content_disposition('attachment');
-  $cgi = $cgi->set_response_content_disposition(attachment => $filename);
-  $cgi = $cgi->set_response_content_disposition('inline'); # default behavior
-  $cgi = $cgi->set_response_content_disposition(inline => $filename);
+  $cgi = $cgi->set_response_disposition('attachment');
+  $cgi = $cgi->set_response_disposition(attachment => $filename);
+  $cgi = $cgi->set_response_disposition('inline'); # default behavior
+  $cgi = $cgi->set_response_disposition(inline => $filename);
 
 Sets the response C<Content-Disposition> header to indicate how the client
 should present the response, with an optional filename specified in Unicode
@@ -776,9 +776,9 @@ characters. C<attachment> suggests to download the content as a file, and
 C<inline> suggests to display the content inline (the default behavior). No
 effect after response headers have been rendered.
 
-=head3 set_response_content_type
+=head3 set_response_type
 
-  $cgi = $cgi->set_response_content_type('application/xml');
+  $cgi = $cgi->set_response_type('application/xml');
 
 Sets the response C<Content-Type> header, to override autodetection in
 L</"render">. C<undef> will remove the override. No effect after response
@@ -922,9 +922,9 @@ L</"headers_rendered">, and it may be called additional times with more
 response data.
 
 The C<Content-Type> response header will be set according to
-L</"set_response_content_type">, or autodetected depending on the data type
-passed in the first call to C<render>, or to C<application/octet-stream> if
-there is no more appropriate value.
+L</"set_response_type">, or autodetected depending on the data type passed in
+the first call to C<render>, or to C<application/octet-stream> if there is no
+more appropriate value.
 
 C<html>, C<xml>, or C<text> data is expected to be decoded Unicode characters,
 and will be encoded according to L</"set_response_charset"> (UTF-8 by default).
@@ -1057,7 +1057,7 @@ itself.
 
 Response setters are distinct methods from request accessors in CGI::Tiny.
 L</"content_type">, L</"header">, and L</"cookie"> are used to access request
-data, and L</"set_response_content_type">, L</"add_response_header">, and
+data, and L</"set_response_type">, L</"add_response_header">, and
 L</"add_response_cookie"> are used to set response headers for the pending
 response before the first call to L</"render">.
 
